Server can now send and process post request

--- a/src/main/java/webapp/index.html
+++ b/src/main/java/webapp/index.html
@@ -10,8 +10,16 @@
     <div id="testpost"></div>
 </body>
 <script>
-    fetch(`testPOST?hello="world"`).then(function(response) {
-        return response.text();
+    fetch(`testPOST`, {
+        method: "POST",
+        body: JSON.stringify(
+            {
+                name: "test",
+                age: "20"
+            }
+        ),
+    }).then(function(response) {
+        return response.json();
     }).then(function(data) {
         console.log(data);
     });
